Edit, Delete hotels and general config

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,34 @@
-<p>home works!</p>
+<nb-layout>
+
+  <nb-layout-header>
+    <h3>Hotels API</h3>
+  </nb-layout-header>
+
+  <nb-layout-column>
+
+    <nb-card>
+
+      <nb-card-body>
+
+        <div class="buttons-actions">
+          <button nbButton hero status="primary" nbTooltip="Crea un nuevo hotel" (click)="addHotel()">
+            <nb-icon icon="plus-outline"></nb-icon>
+          </button>
+
+        </div>
+
+        <nb-tabset>
+          <nb-tab tabTitle="Hotels" tabIcon="home-outline" responsive>
+            <app-hotels [hotels]="hotels" (refreshData)="refreshDataReceive($event)"></app-hotels>
+          </nb-tab>
+        </nb-tabset>
+
+      </nb-card-body>
+
+    </nb-card>
+
+  </nb-layout-column>
+
+  <nb-layout-footer>Contact us</nb-layout-footer>
+
+</nb-layout>
